Fix radar titles overlapping on some screen sizes

--- a/imports/ui/radar-view.css
+++ b/imports/ui/radar-view.css
@@ -56,8 +56,8 @@
     border: 2px solid var(--light-gray);
     border-top: none;
     height: 100%;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .quadrant .quadrant-title-container {
